Compilador/src/antlr/GritoParser.java
// Generated from Grito.g4 by ANTLR 4.10.1

    package antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GritoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DECLARACOES=1, ALGORITMO=2, RETORNA=3, ATRIBUIR=4, OP_ARIT=5, OP_REL=6, 
		OP_LOG=7, TIPO=8, FUNC=9, NUM=10, AP=11, FP=12, CADEIA=13, ENTRADA=14, 
		SAIDA=15, CONDICIONAL=16, COND=17, REPETICAO=18, REP=19, FL=20, BLOCO=21, 
		VIRGULA=22, ID=23, WS=24, ErrorChar=25, COMENTARIO=26;
	public static final int
		RULE_programa = 0, RULE_declaracoes = 1, RULE_comandos = 2, RULE_declaracao = 3, 
		RULE_inicializacao = 4, RULE_comando = 5, RULE_atribuicao = 6, RULE_computacoes = 7, 
		RULE_computacao = 8, RULE_funcao = 9, RULE_argumentos = 10, RULE_argumento = 11, 
		RULE_informacao = 12, RULE_operador = 13, RULE_termo = 14, RULE_io = 15, 
		RULE_repeticao = 16, RULE_condicao = 17, RULE_conjunturas = 18, RULE_conjuntura = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "declaracoes", "comandos", "declaracao", "inicializacao", 
			"comando", "atribuicao", "computacoes", "computacao", "funcao", "argumentos", 
			"argumento", "informacao", "operador", "termo", "io", "repeticao", "condicao", 
			"conjunturas", "conjuntura"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'DECLARACOES'", "'ALGORITMO'", "'RETORNA'", "'='", null, null, 
			null, null, "'funcao'", null, "'('", "')'", null, "'LER'", "'IMPRIMIR'", 
			null, "'?'", "'enquanto'", "'@'", "'!'", "'#'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DECLARACOES", "ALGORITMO", "RETORNA", "ATRIBUIR", "OP_ARIT", "OP_REL", 
			"OP_LOG", "TIPO", "FUNC", "NUM", "AP", "FP", "CADEIA", "ENTRADA", "SAIDA", 
			"CONDICIONAL", "COND", "REPETICAO", "REP", "FL", "BLOCO", "VIRGULA", 
			"ID", "WS", "ErrorChar", "COMENTARIO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grito.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GritoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
	 
		public ProgramaContext() { }
		public void copyFrom(ProgramaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BlocoProgramaContext extends ProgramaContext {
		public TerminalNode DECLARACOES() { return getToken(GritoParser.DECLARACOES, 0); }
		public DeclaracoesContext declaracoes() {
			return getRuleContext(DeclaracoesContext.class,0);
		}
		public TerminalNode ALGORITMO() { return getToken(GritoParser.ALGORITMO, 0); }
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GritoParser.EOF, 0); }
		public BlocoProgramaContext(ProgramaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GritoListener ) ((GritoListener)listener).enterBlocoPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GritoListener ) ((GritoListener)listener).exitBlocoPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GritoVisitor ) return ((GritoVisitor<? extends T>)visitor).visitBlocoPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			_localctx = new BlocoProgramaContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(DECLARACOES);
			setState(41);
			declaracoes();
			setState(42);
			match(ALGORITMO);
			setState(43);
			comandos();
			setState(44);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracoesContext extends ParserRuleContext {
		public DeclaracoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracoes; }
	 
		public DeclaracoesContext() { }
		public void copyFrom(DeclaracoesContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BlocoDeclaracoesContext extends DeclaracoesContext {
		public List<DeclaracoesContext> declaracoes() {
			return getRuleContexts(DeclaracoesContext.class);
		}
		public DeclaracoesContext declaracoes(int i) {
			return getRuleContext(DeclaracoesContext.class,i);
		}
		public List<DeclaracaoContext> declaracao() {
			return getRuleContexts(DeclaracaoContext.class);
		}
		public DeclaracaoContext declaracao(int i) {
			return getRuleContext(DeclaracaoContext.class,i);
		}
		public List<FuncaoContext> funcao() {
			return getRuleContexts(FuncaoContext.class);
		}
		public FuncaoContext funcao(int i) {
			return getRuleContext(FuncaoContext.class,i);
		}
		public BlocoDeclaracoesContext(DeclaracoesContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GritoListener ) ((GritoListener)listener).enterBlocoDeclaracoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GritoListener ) ((GritoListener)listener).exitBlocoDeclaracoes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GritoVisitor ) return ((GritoVisitor<? extends T>)visitor).visitBlocoDeclaracoes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracoesContext declaracoes() throws RecognitionException {
		DeclaracoesContext _localctx = new DeclaracoesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracoes);
		try {
			int _alt;
			_localctx = new BlocoDeclaracoesContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(48);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case TIPO:
						{
						setState(46);
						declaracao();
						}
						break;
					case FUNC:
						{
						setState(47);
						funcao();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(50);
					declaracoes();
					}
					} 
				}
				setState(56);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComandosContext extends ParserRuleContext {
		public ComandosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comandos; }
	 
		public ComandosContext() { }
		public void copyFrom(ComandosContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NComandosContext extends ComandosContext {
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public List<ComandosContext> comandos() {
			return getRuleContexts(ComandosContext.class);
		}
		public ComandosContext comandos(int i) {
			return getRuleContext(ComandosContext.class,i);
		}
		public NComandosContext(ComandosContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GritoListener ) ((GritoListener)listener).enterNComandos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GritoListener ) ((GritoListener)listener).exitNComandos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GritoVisitor ) return ((GritoVisitor<? extends T>)visitor).visitNComandos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandosContext comandos() throws RecognitionException {
		ComandosContext _localctx = new ComandosContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_comandos);
		try {
			int _alt;
			_localctx = new NComandosContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(57);
					comando();
					setState(58);
					comandos();
					}
					} 
				}
				setState(64);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracaoContext extends ParserRuleContext {
		public DeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao; }
	 
		public DeclaracaoContext() { }
		public void copyFrom(DeclaracaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NDeclaracaoContext extends DeclaracaoContext {
		public TerminalNode TIPO() { return getToken(GritoParser.TIPO, 0); }
		public TerminalNode ID() { return getToken(GritoParser.ID, 0); }
		public InicializacaoContext inicializacao() {
			return getRuleContext(InicializacaoContext.class,0);
		}
		public TerminalNode FL() { return getToken(GritoParser.FL, 0); }
		public NDeclaracaoContext(DeclaracaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GritoListener ) ((GritoListener)listener).enterNDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GritoListener ) ((GritoListener)listener).exitNDeclaracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GritoVisitor ) return ((GritoVisitor<? extends T>)visitor).visitNDeclaracao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracaoContext declaracao() throws RecognitionException {
		DeclaracaoContext _localctx = new DeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracao);
		try {
			_localctx = new NDeclaracaoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(TIPO);
			setState(66);
			match(ID);
			setState(67);
			inicializacao();
			setState(68);
			match(FL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InicializacaoContext extends ParserRuleContext {
		public InicializacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicializacao; }
	 
		public InicializacaoContext() { }
		public void copyFrom(InicializacaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NInicializacaoContext extends InicializacaoContext {
		public List<TerminalNode> ATRIBUIR() { return getTokens(GritoParser.ATRIBUIR); }
		public TerminalNode ATRIBUIR(int i) {
			return getToken(GritoParser.ATRIBUIR, i);
		}
		public List<InformacaoContext> informacao() {
			return getRuleContexts(InformacaoContext.class);
		}
		public InformacaoContext informacao(int i) {
			return getRuleContext(InformacaoContext.class,i);
		}
		public NInicializacaoContext(InicializacaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GritoListener ) ((GritoListener)listener).enterNInicializacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GritoListener ) ((GritoListener)listener).exitNInicializacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GritoVisitor ) return ((GritoVisitor<? extends T>)visitor).visitNInicializacao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InicializacaoContext inicializacao() throws RecognitionException {
		InicializacaoContext _localctx = new InicializacaoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_inicializacao);
		int _la;
		try {
			_localctx = new NInicializacaoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ATRIBUIR) {
				{
				{
				setState(70);
				match(ATRIBUIR);
				setState(71);
				informacao();
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComandoContext extends ParserRuleContext {
		public ComandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando; }
	 
		public ComandoContext() { }
		public void copyFrom(ComandoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NComandoContext extends ComandoContext {
		public AtribuicaoContext atribuicao() {
			return getRuleContext(AtribuicaoContext.class,0);
		}
		public IoContext io() {
			return getRuleContext(IoContext.class,0);
		}
		public RepeticaoContext repeticao() {
			return getRuleContext(RepeticaoContext.class,0);
		}
		public CondicaoContext condicao() {
			return getRuleContext(CondicaoContext.class,0);
		}
		public NComandoContext(ComandoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GritoListener ) ((GritoListener)listener).enterNComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GritoListener ) ((GritoListener)listener).exitNComando(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GritoVisitor ) return ((GritoVisitor<? extends T>)visitor).visitNComando(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandoContext comando() throws RecognitionException {
		ComandoContext _localctx = new ComandoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_comando);
		try {
			_localctx = new NComandoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(77);
				atribuicao();
				}
				break;
			case ENTRADA:
			case SAIDA:
				{
				setState(78);
				io();
				}
				break;
			case REP:
				{
				setState(79);
				repeticao();
				}
				break;
			case COND:
				{
				setState(80);
				condicao();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtribuicaoContext extends ParserRuleContext {
		public AtribuicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribuicao; }
	 
		public AtribuicaoContext() { }
		public void copyFrom(AtribuicaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NAtribuicaoContext extends AtribuicaoContext {
		public TerminalNode ID() { return getToken(GritoParser.ID, 0); }
		public TerminalNode ATRIBUIR() { return getToken(GritoParser.ATRIBUIR, 0); }
		public TerminalNode FL() { return getToken(GritoParser.FL, 0); }
		public List<ComputacaoContext> computacao() {
			return getRuleContexts(ComputacaoContext.class);
		}
		public ComputacaoContext computacao(int i) {
			return getRuleContext(ComputacaoContext.class,i);
		}
		public List<InformacaoContext> informacao() {
			return getRuleContexts(InformacaoContext.class);
		}
		public InformacaoContext informacao(int i) {
			return getRuleContext(InformacaoContext.class,i);
		}
		public NAtribuicaoContext(AtribuicaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GritoListener ) ((GritoListener)listener).enterNAtribuicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GritoListener ) ((GritoListener)listener).exitNAtribuicao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GritoVisitor ) return ((GritoVisitor<? extends T>)visitor).visitNAtribuicao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtribuicaoContext atribuicao() throws RecognitionException {
		AtribuicaoContext _localctx = new AtribuicaoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_atribuicao);
		int _la;
		try {
			_localctx = new NAtribuicaoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(ID);
			setState(84);
			match(ATRIBUIR);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUM) | (1L << CADEIA) | (1L << ID))) != 0)) {
				{
				setState(87);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(85);
					computacao();
					}
					break;
				case 2:
					{
					setState(86);
					informacao();
					}
					break;
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			match(FL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComputacoesContext extends ParserRuleContext {
		public ComputacoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_computacoes; }
	 
		public ComputacoesContext() { }
		public void copyFrom(ComputacoesContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NComputacoesContext extends ComputacoesContext {
		public List<ComputacaoContext> computacao() {
			return getRuleContexts(ComputacaoContext.class);
		}
		public ComputacaoContext computacao(int i) {
			return getRuleContext(ComputacaoContext.class,i);
		}
		public List<ComputacoesContext> computacoes() {
			return getRuleContexts(ComputacoesContext.class);
		}
		public ComputacoesContext computacoes(int i) {
			return getRuleContext(ComputacoesContext.class,i);
		}
		public NComputacoesContext(ComputacoesContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GritoListener ) ((GritoListener)listener).enterNComputacoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GritoListener ) ((GritoListener)listener).exitNComputacoes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GritoVisitor ) return ((GritoVisitor<? extends T>)visitor).visitNComputacoes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComputacoesContext computacoes() throws RecognitionException {
		ComputacoesContext _localctx = new ComputacoesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_computacoes);
		try {
			int _alt;
			_localctx = new NComputacoesContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(94);
					computacao();
					setState(95);
					computacoes();
					}
					} 
				}
				setState(101);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComputacaoContext extends ParserRuleContext {
		public ComputacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_computacao; }
	 
		public ComputacaoContext() { }
		public void copyFrom(ComputacaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NComputacaoContext extends ComputacaoContext {
		public TermoContext termo() {
			return getRuleContext(TermoContext.class,0);
		}
		public OperadorContext operador() {
			return getRuleContext(OperadorContext.class,0);
		}
		public NComputacaoContext(ComputacaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GritoListener ) ((GritoListener)listener).enterNComputacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GritoListener ) ((GritoListener)listener).exitNComputacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GritoVisitor ) return ((GritoVisitor<? extends T>)visitor).visitNComputacao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComputacaoContext computacao() throws RecognitionException {
		ComputacaoContext _localctx = new ComputacaoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_computacao);
		int _la;
		try {
			_localctx = new NComputacaoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			termo();
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OP_ARIT) | (1L << OP_REL) | (1L << OP_LOG))) != 0)) {
				{
				setState(103);
				operador();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncaoContext extends ParserRuleContext {
		public FuncaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcao; }
	 
		public FuncaoContext() { }
		public void copyFrom(FuncaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NFuncaoContext extends FuncaoContext {
		public TerminalNode FUNC() { return getToken(GritoParser.FUNC, 0); }
		public TerminalNode ID() { return getToken(GritoParser.ID, 0); }
		public TerminalNode AP() { return getToken(GritoParser.AP, 0); }
		public ArgumentosContext argumentos() {
			return getRuleContext(ArgumentosContext.class,0);
		}
		public TerminalNode FP() { return getToken(GritoParser.FP, 0); }
		public List<TerminalNode> BLOCO() { return getTokens(GritoParser.BLOCO); }
		public TerminalNode BLOCO(int i) {
			return getToken(GritoParser.BLOCO, i);
		}
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public TerminalNode RETORNA() { return getToken(GritoParser.RETORNA, 0); }
		public ConjunturasContext conjunturas() {
			return getRuleContext(ConjunturasContext.class,0);
		}
		public TerminalNode FL() { return getToken(GritoParser.FL, 0); }
		public NFuncaoContext(FuncaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GritoListener ) ((GritoListener)listener).enterNFuncao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GritoListener ) ((GritoListener)listener).exitNFuncao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GritoVisitor ) return ((GritoVisitor<? extends T>)visitor).visitNFuncao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncaoContext funcao() throws RecognitionException {
		FuncaoContext _localctx = new FuncaoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_funcao);
		try {
			_localctx = new NFuncaoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(FUNC);
			setState(107);
			match(ID);
			setState(108);
			match(AP);
			setState(109);
			argumentos();
			setState(110);
			match(FP);
			setState(111);
			match(BLOCO);
			setState(112);
			comandos();
			setState(113);
			match(RETORNA);
			setState(114);
			conjunturas();
			setState(115);
			match(FL);
			setState(116);
			match(BLOCO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
